<resources>
    <string name="actionbar_name">parivartree</string>
    <string name="app_name">parivartree</string>
    <string name="title_activity_login_main">parivartree</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="USER_PREFERENCES">userr_preferences</string>
    <string name="USER_PREFERENCE">userrr_preferences</string>
    <string name="title_activity_main">parivartree</string>
    <string name="title_activity_login_details">parivartree</string>
    <string name="title_activity_sign_up">parivartree</string>
    <string name="facebook_app_id">210462185806713</string>
    <string name="title_activity_sign_up_details">SignUpDetailsActivity</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="title_activity_terms">TermsActivity</string>
    <string name="title_activity_changing_password">ChangingPasswordActivity</string>
    <string name="title_activity_otpcode">OtpcodeActivity</string>
    <string name="action_notification">Notification</string>
    <string name="action_message">Message</string>
    <string name="action_invite">Invite</string>
    <string name="action_discussion">Discussion</string>
    <string name="item_one">My Tree</string>
    <string name="item_two">My Profile</string>
    <string name="item_three">My Wall</string>
    <string name="item_four">My Studio</string>
    <string name="item_five">Events</string>
    <string name="item_six">Messages</string>
    <string name="item_seven">Settings</string>
    <string name="item_nine">Signout</string>
    <string-array name="nav_drawer_items">
        <item>My Tree</item>
        <item>My Profile</item>
        <item>My Wall</item>
        <item>My Studio</item>
        <item>Events</item>
        <item>Messages</item>
        <item>Setting</item>
        <item>Signout</item>
    </string-array>
    <string name="crop__saving">Saving picture…</string>
    <string name="crop__wait">Please wait…</string>
    <string name="crop__pick_error">No image sources available</string>
    <string name="crop__done">Done</string>
    <string name="crop__cancel">Cancel</string>
    <string name="places_key">AIzaSyB0s0JzVM5Rva51-Bj0ph0LxGE6rUXegmw</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="sample">Sample</string>
    <string name="hostname">https://www.parivartree.com/app.php/</string>
    <string name="url_login1">mobilelogin1</string>
    <string name="url_mobileverify">mobilesmsverify</string>
    <string name="url_mobileverifyprofileupdate">mobilesmsverifyprofileupdate</string>
    <string name="url_signup">mobile/signup1</string>
    <string name="url_forgot_password">mobileforgotpassword1</string>
    <string name="url_create_event">mobilecreateevent</string>
    <string name="url_delete_event">mobiledeleteevent</string>
    <string name="url_edit_event">mobileeditevent</string>
    <string name="url_my_event">mobilegetmyevents</string>
    <string name="url_others_event">mobilegetevents</string>
    <string name="url_join_event">mobilejoinevent</string>
    <string name="url_maybe_event">mobilemaybeevent</string>
    <string name="url_decline_event">mobiledeclineevent</string>
    <string name="url_edit_profile1_url">mobileupdateprofile1</string>
    <string name="url_religion">religion</string>
    <string name="url_community">mobilecommunity</string>
    <string name="url_all_community">mobilegetcommunities</string>
    <string name="url_gothra">mobilegothra</string>
    <string name="url_mytree">mobilemytree</string>
    <string name="url_change_password">mobilechangepassword</string>
    <string name="url_set_password">mobilesetpassword</string>
    <string name="url_all_notification">mobilenotification</string>
    <string name="url_search_users">mobilesearchusers</string>
    <string name="url_add_relation">mobileaddrelation</string>
    <string name="url_create_user">mobilecreateuser</string>
    <string name="url_invite_user">mobileinvite</string>
    <string name="url_autogenerate_email">mobileautogenerateemail</string>
    <string name="url_invitation_accept">mobileinvitationaccept</string>
    <string name="url_invitation_decline">mobileinvitationdecline</string>
    <string name="url_find_joinees">mobileeventjoinees</string>
    <string name="url_facebook_login">mobilefacebooklogin</string>
    <string name="url_recomondation_accept">mobileacceptrecomondation</string>
    <string name="url_recomondation_decline">mobiledeclinerecomondation</string>
    <string name="url_profile_imageupload">mobileprofileimgupload</string>
    <string name="url_deceased_user">mobiledeceased</string>
    <string name="url_delete_user">mobiledeleteuser</string>
    <string name="url_hide_user">mobilehideuser</string>
    <string name="url_unhide_user">mobileunhideuser</string>
    <string name="url_make_alive">mobilemakemealive</string>
    <string name="url_immediate_family">mobileimediaterelations</string>
    <string name="url_field_privacy">mobilesetfieldprivacy</string>
    <string name="url_view_profile2">mobileprofileview</string>
    <string name="url_refine_search"> mobile/refinedsearch</string>
    <string name="url_unread_notification">mobilegetNotifications</string>
    <string name="url_unread_count_notification">mobilenotificationcount</string>
    <string name="url_setreadstatus_notification">mobilesetreadstatus</string>
    <string name="url_gallary">mobilegalleryindex</string>
    <string name="url_gallary_album">mobilegalleryalbum</string>
    <string name="url_gallary_album_delete">mobilegalleryconfirmalbumdelete</string>
    <string name="url_gallary_edit_name">mobileeditgalleryname</string>
     <string name="url_gallary_create">mobileuploadAlbumImage</string>
    <string name="galleryhostname">https://www.parivartree.com/imagegallery/</string>
    <string name="photos">/photos/</string>
    <string name="thumbs">/thumbs/</string>
    <string name="login_url">http://115.124.125.53/app_dev.php/mobilelogin</string>
    <string name="signup_url">http://115.124.125.53/app_dev.php/addnewuser</string>
    <string name="view_profile_url">http://115.124.125.53/app_dev.php/mobileprofile</string>
    <string name="forgot_password_url">http://115.124.125.53/app_dev.php/mobileforgotpassword</string>
    <string name="create_event_url">http://115.124.125.53/app_dev.php/mobilecreateevent</string>
    <string name="delete_event_url">http://115.124.125.53/app_dev.php/mobiledeleteevent</string>
    <string name="getmy_events_url">http://115.124.125.53/app_dev.php/mobilegetmyevents</string>
    <string name="getAll_events_url">http://115.124.125.53/app_dev.php/mobilegetevents</string>
    <string name="join_events_url">http://115.124.125.53/app_dev.php/mobilejoinevent</string>
    <string name="maybe_events_url">http://115.124.125.53/app_dev.php/mobilemaybeevent</string>
    <string name="decline_events_url">http://115.124.125.53/app_dev.php/mobiledeclineevent</string>
    <string name="edit_profile_url">http://115.124.125.53/app_dev.php/mobileprofileupdate</string>
    <string name="religion_url">http://115.124.125.53/app_dev.php/religion</string>
    <string name="community_url">http://115.124.125.53/app_dev.php/mobilecommunity</string>
    <string name="gothra_url">http://115.124.125.53/app_dev.php/mobilegothra</string>
    <string name="tree_view_url">http://115.124.125.53/app_dev.php/mobilemytree</string>
    <string name="set_password_url">http://115.124.125.53/app_dev.php/mobilesetpassword</string>
    <string name="edit_event_url">http://115.124.125.53/app_dev.php/mobileeditevent</string>
    <string name="get_notification_url">http://115.124.125.53/app_dev.php/mobilenotification</string>
    <string name="create_new_relation_url">http://115.124.125.53/app_dev.php/mobileaddrelation</string>
    <string name="search_user_url">http://115.124.125.53/app_dev.php/mobilesearchusers</string>
    <string name="invite_user_url">http://115.124.125.53/app_dev.php/mobileinvite</string>
    <string name="autogenerate_email_url">http://115.124.125.53/app_dev.php/mobileautogenerateemail</string>
    <string name="invitation_accept_url">http://115.124.125.53/app_dev.php/mobileinvitationaccept</string>
    <string name="invitation_decline_url"> http://115.124.125.53/app_dev.php/mobileinvitationdecline</string>
    <string name="find_joinees_url"> http://115.124.125.53/app_dev.php/mobileeventjoinees</string>
    <string name="facebook_login_url">http://115.124.125.53/app_dev.php/mobilefacebooklogin</string>
    <string name="recomondation_accept_url">http://115.124.125.53/app_dev.php/mobileacceptrecomondation</string>
    <string name="recomondation_decline_url">http://115.124.125.53/app_dev.php/mobiledeclinerecomondation</string>
    <string name="profile_imageupload_url">http://115.124.125.53/app_dev.php/mobileprofileimgupload</string>
    <string name="delete_user_url">http://115.124.125.53/app_dev.php/mobiledeleteuser</string>
    <string name="deceased_user_url">http://115.124.125.53/app_dev.php/mobiledeceased</string>
    <string name="hide_user_url">http://115.124.125.53/app_dev.php/mobilehideuser</string>
    <string name="unhide_user_url">http://115.124.125.53/app_dev.php/mobileunhideuser</string>
    <string name="make_alive_url">http://115.124.125.53/app_dev.php/mobilemakemealive</string>
    <string name="immediate_family_url">http://115.124.125.53/app_dev.php/mobileimediaterelations</string>
    <string name="field_privacy_url">http://115.124.125.53/app_dev.php/mobilesetfieldprivacy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="editalbum">Edit Album</string>
    <string name="deletealbum">Delete Album</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="enterthevalues">Enter the values..</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="albumsubmit">Submit</string>
    <string name="title_activity_createnewalbum">New Album</string>
</resources>