<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/parivar_mobile_bg_3_0"
    android:orientation="vertical"
    android:padding="15dp" >

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/name"
        android:padding="7dp" >
    </EditText>

    <EditText
        android:id="@+id/edit_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/description"
        android:padding="7dp" >
    </EditText>

    <Spinner
        android:id="@+id/spin_access"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_background"
        android:entries="@array/privacyaccessarray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp" >

        <com.parivartree.customviews.HorizontalListView
            android:id="@+id/horizontal_photos"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:divider="#878787"
            android:padding="5dp" />

        <ImageView
            android:id="@+id/gallery"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:src="@drawable/gallery" />
    </LinearLayout>

    <Button
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:id="@+id/btn_submit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/albumsubmit" />

</LinearLayout>